--- a/cassandra-tests/pom.xml
+++ b/cassandra-tests/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>brave-tests</artifactId>
       <version>${brave.version}</version>
     </dependency>
+    <dependency>
+      <groupId>io.zipkin.zipkin2</groupId>
+      <artifactId>zipkin</artifactId>
+      <version>3.0.2</version>
+    </dependency>
 
     <dependency>
       <groupId>org.junit.jupiter</groupId>
