--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,8 @@
     <maven.compiler.testRelease>11</maven.compiler.testRelease>
 
     <cassandra-driver-core.version>3.11.2</cassandra-driver-core.version>
-    <brave.version>5.18.0</brave.version>
+    <brave.version>6.0.0</brave.version>
+    <zipkin-reporter.version>3.2.1</zipkin-reporter.version>
 
     <!-- override to set exclusions per-project -->
     <errorprone.args />
